iptables
###
###
###Change the phrase THISIP to reflect the IP of the server being installed then drop this file into/etc/sysconfig/iptables. This is a template and should be adjusted appropriately. The firewall will log all attempted intrusions and attacks (except for 135, 136 and 445), allow systems access to SSH and allow monitoring to access the server.
###
###

*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
#
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
#
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:INBOUND - [0:0]
:OUTBOUND - [0:0]
#
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m limit --limit 10/sec -j ACCEPT

###### ###  OS fingerprinting ######
-A INPUT -p tcp -m tcp --dport 0  -j DROP
-A INPUT -p udp -m udp --dport 0  -j DROP
-A INPUT -p tcp -m tcp --sport 0  -j DROP
-A INPUT -p udp -m udp --sport 0  -j DROP

#########    bogons     #######
######### change the 172 + 192 address' to LAN IP's
-A INPUT -s 172.16.0.0/12   -j DROP
-A INPUT -s 192.168.0.0/16  -j DROP
-A INPUT -s 224.0.0.0/4     -j DROP
-A INPUT -d 224.0.0.0/8     -j DROP
-A INPUT -s 240.0.0.0/5     -j DROP
-A INPUT -d 240.0.0.0/5     -j DROP
-A INPUT -s 127.0.0.0/8     -j DROP
-A INPUT -s 0.0.0.0/8       -j DROP
-A INPUT -s 169.254.0.0/16  -j DROP
-A INPUT -s 224.0.0.0/8 -j DROP
-A INPUT -d 224.0.0.0/8 -j DROP
-A INPUT -d 255.255.255.255 -j DROP
-A INPUT -d 0.0.0.0/32 -j DROP
-A INPUT -f -m limit --limit 10/min -j LSI

#### change 'THISIP' to the box IP address
-A INPUT -i eth0 -d THISIP/32 -j INBOUND
#
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -s 224.0.0.0/8 -j DROP
-A OUTPUT -d 224.0.0.0/8 -j DROP
-A OUTPUT -s 255.255.255.255/32 -j DROP
-A OUTPUT -d 0.0.0.0/32 -j DROP
-A OUTPUT -m state --state INVALID -j DROP
-A OUTPUT -o eth0 -j OUTBOUND
#
-A FORWARD -p icmp -m limit --limit 10/sec -j ACCEPT

#
-A INBOUND -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INBOUND -p udp -m state --state RELATED,ESTABLISHED -j ACCEPT

#####  stop brute force from random ip 
-A INBOUND -p tcp -m tcp --dport 22 -m state --state NEW -m limit --limit 1/min --limit-burst 4 -j ACCEPT
iptables -I INBOUND -p tcp --dport ssh -i eth0 -m state --state NEW -m recent --set
iptables -I INBOUND -p tcp --dport ssh -i eth0 -m state --state NEW -m recent --update --seconds 60 --hitcount 6 -j DROP
